fixed broken stylesheet;

--- a/altstyle.css
+++ b/altstyle.css
@@ -3,10 +3,16 @@ form-creator {
   display: block;
 }
 
-form-creator .hidden {
-  /* visibility: collapse; */
-  display: none;
-  height: 0;
+input-field-object > .form-element > .form-group, 
+form > .form-element > .form-group {
+  overflow-y: hidden;
+  height: auto;
+}
+
+input-field-object > .form-element > .form-group.hidden,
+form > .form-element > .form-group.hidden {
+  overflow-y: hidden;
+  max-height: 0px;
 }
 
 form-creator input, textarea {
@@ -74,12 +80,9 @@ input-field-list > .form-element {
 }
 
 input-field-object > .form-element {
-  transition: max-height 2s;
-  max-height: 1000px;
   border: 1px solid darkgray;
   border-radius: 10px;
   box-shadow: 2px 2px 10px 2px darkgray;
-  overflow-y: hidden;
 }
 
 .form-object-collapse {
@@ -110,7 +113,7 @@ label {
   vertical-align: top;
 }
 
-form {
+form-creator > form {
   box-shadow: 2px 2px 10px 2px gray;
   border-radius: 10px;
 }
@@ -164,6 +167,7 @@ button.form-object-collapse {
   display: block;
   margin-top: 10px;
   margin-bottom: 10px;
+  width: 60%;
 }
 
 [pflichtfeld="true"] > label, [pflichtfeld="true"] > .form-element > label:first-of-type {
